# productivity-app

./: .gitignore  index.html  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: desktop_manager.rs  lib.rs  main.rs  models.rs  persistence.rs  state.rs  window_enum.rs
src-tauri/src/commands/: desktops.rs  mod.rs  projects.rs  tasks.rs  windows.rs
src/assets/styles/: main.css
src/components/: KanbanColumn.vue  PrioritizationView.vue  ProjectCard.vue  TaskCard.vue  TaskInput.vue
src/composables/: useTauri.ts
src/pages/: ProjectDetailPage.vue  ProjectsPage.vue
src/router/: index.ts
src/stores/: projects.ts  tasks.ts  windows.ts
src/types/: index.ts
