[package]
name = "productivity-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "productivity_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "productivity-app"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
winvd = "0.0.48"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_Graphics_Dwm",
]

[build-dependencies]
tauri-build = { version = "2", features = [] }
